# dictionary-crawler

./: .gitignore  README.md  pyproject.toml
src/: example.py
src/dictionary_crawler/: __init__.py  base.py  exceptions.py  http.py  utils.py
src/dictionary_crawler/crawlers/: __init__.py  cambridge.py
src/dictionary_crawler/models/: __init__.py  cambridge.py  common.py
tests/: conftest.py  test_base.py  test_cambridge.py  test_exceptions.py  test_http.py  test_models.py  test_models_common.py  test_utils.py
tests/fixtures/: hello_page.html  not_found_page.html
